[project]
name = "tinyzero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.7.0",
    "codetiming>=1.4.0",
    "ipython>=8.18.1",
    "matplotlib>=3.9.4",
    "omegaconf>=2.3.0",
    "ray>=2.46.0",
    "setuptools>=80.7.1",
    "tensordict>=0.8.2",
    "torch==2.4.0",
    "vllm==0.6.3",
    "wandb>=0.19.11",
]
